docs: documentation for delete opening
